objects/nFUSE__Creditor__c.object
<CustomObject>
    <description>Information specific to each Creditor for a given Credit Report</description>
    <fields>
        <fullName>nFUSE__Account_Number__c</fullName>
        <description>The system populates this optional field to associate the account number with the creditor.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Account_Type_Code__c</fullName>
        <description>The system populates this optional text field with the account type code, which indicates the type of loan made by the creditor to the borrower.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The system populates this optional text field with the account type code, which indicates the type of loan made by the creditor to the borrower.</inlineHelpText>
        <label>Account Type Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Balance_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Balance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nFUSE__Count_30_Days_Past_Due__c</fullName>
        <description>The system populates this optional text field with the number of times the borrower&apos;s payment was 30-59 days past due.</description>
        <inlineHelpText>The system populates this optional text field with the number of times the borrower&apos;s payment was 30-59 days past due.</inlineHelpText>
        <label>Count 30 Days Past Due</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFUSE__Count_60_Days_Past_Due__c</fullName>
        <description>The system populates this optional text field with the number of times the borrower&apos;s payment was 60-89 days past due.</description>
        <inlineHelpText>The system populates this optional text field with the number of times the borrower&apos;s payment was 60-89 days past due.</inlineHelpText>
        <label>Count 60 Days Past Due</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFUSE__Count_90_Days_Past_Due__c</fullName>
        <description>The system populates this optional text field with the number of times the borrower&apos;s payment was 90 or more days past due.</description>
        <inlineHelpText>The system populates this optional text field with the number of times the borrower&apos;s payment was 90 or more days past due.</inlineHelpText>
        <label>Count 90 Days Past Due</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFUSE__Creditor_Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nFUSE__Creditor_Industry_Code__c</fullName>
        <description>The system populates this optional text field with the creditor industry code.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The system populates this optional text field with the creditor industry code.</inlineHelpText>
        <label>Creditor Industry Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Creditor_Name__c</fullName>
        <description>Entity Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Creditor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Creditor_Number__c</fullName>
        <description>The system populates this optional text field with the credit subscriber&apos;s member code.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The system populates this optional text field with the credit subscriber&apos;s member code.</inlineHelpText>
        <label>Creditor Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Current_Status_Code__c</fullName>
        <description>The system populates this optional text field with the current status code, which indicates the current status of the account.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The system populates this optional text field with the current status code, which indicates the current status of the account.</inlineHelpText>
        <label>Current Status Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Date_Of_Last_Payment__c</fullName>
        <description>The system populates this optional date field with the date the borrower made their most recent monthly payment.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The system populates this optional date field with the date the borrower made their most recent monthly payment.</inlineHelpText>
        <label>Date Of Last Payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nFUSE__Date_Opened__c</fullName>
        <description>The system populates this optional date field with the date the account was opened.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The system populates this optional date field with the date the account was opened.</inlineHelpText>
        <label>Date Opened</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nFUSE__High_Credit_Amount__c</fullName>
        <description>The system populates this optional currency field with the highest amount ever owed on the account or the original balance.</description>
        <inlineHelpText>The system populates this optional currency field with the highest amount ever owed on the account or the original balance.</inlineHelpText>
        <label>High Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nFUSE__Liability_Ownership_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Liability Ownership Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Liability_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Liability Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Monthly_Payment_Amount__c</fullName>
        <label>Monthly Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nFUSE__Months_Reviewed__c</fullName>
        <description>The system populates this optional field with the number of months the borrower&apos;s payment history was reviewed.</description>
        <inlineHelpText>The system populates this optional field with the number of months the borrower&apos;s payment history was reviewed.</inlineHelpText>
        <label>Months Reviewed</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFUSE__Past_Due_Amount__c</fullName>
        <description>The system populates this optional currency field with the amount the borrower has past due on the account.</description>
        <inlineHelpText>The system populates this optional currency field with the amount the borrower has past due on the account.</inlineHelpText>
        <label>Past Due Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nFUSE__Payment_Pattern__c</fullName>
        <description>The system populates this optional text field with the borrower&apos;s payment pattern.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The system populates this optional text field with the borrower&apos;s payment pattern.</inlineHelpText>
        <label>Payment Pattern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__ReportId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Credit Report associated with the Creditor</description>
        <label>Credit Report</label>
        <referenceTo>nFUSE__Credit_Report__c</referenceTo>
        <relationshipName>Creditor_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFUSE__Terms_Duration__c</fullName>
        <description>The system populates this optional text field with the term duration of the financial obligation.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The system populates this optional text field with the term duration of the financial obligation.</inlineHelpText>
        <label>Terms Duration</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Creditor</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Creditor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Creditors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>